Bug 76961 - Refresh interval of link to external data is set to 99.999 seconds EVERY time the document is saved
Summary: Refresh interval of link to external data is set to 99.999 seconds EVERY time...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.2.1 release
Hardware: Other All
: high critical
Assignee: Niklas Johansson
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
: 77138 (view as bug list)
Depends on:
Blocks: Calc-External-Datalink
  Show dependency treegraph
 
Reported: 2014-04-02 19:07 UTC by ralf.fehlau
Modified: 2017-08-28 19:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File sample with external link 10 seconds update, create with 4.1.6 (18.18 KB, application/x-vnd.oasis.opendocument.spreadsheet)
2014-04-02 22:26 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ralf.fehlau 2014-04-02 19:07:31 UTC
At least versions 4.2.2.1 for Windows and 4.2.3.1 for Ubuntu are affected. Documents with external links to webpages with a refresh time interval of . for example - 120 seconds are set to 99.999 seconds refresh interval, thus makes ALL of my documents (about 300 documents) UNUSABLE, because they will NEVER UPDATE again! Libreoffice 3 works.
Comment 1 m_a_riosv 2014-04-02 22:23:43 UTC
Hi ralf, thanks for reporting.

Reproducible:
Win7x64Ultimate
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Versión: 4.2.3.2 Id. de compilación: 7c5c769e412afd32da4d946d2cb0c8b0674e95e0

Last working.
Version: 4.1.6.0.0+ Build ID: 0b772a163b2536fc55aa3b4de925119e33af769

I think the issue is when saving, because for me opening well a file save with 4.1
Comment 2 m_a_riosv 2014-04-02 22:26:09 UTC
Created attachment 96812 [details]
File sample with external link 10 seconds update, create with 4.1.6
Comment 3 Kohei Yoshida 2014-04-11 12:41:26 UTC
How did you add an external link from the UI?  A reproducible step would be helpful for this one.  Thanks.
Comment 4 m_a_riosv 2014-04-11 13:30:13 UTC
From Menu/Insert/Link to external data.
Link to any html url in the web.
Set up the "update every" time.

Or edit the link in my sample file from Menu/Edit/Links

Saving with 4.1 works fine preserving the update value.
Saving with 4.2 change the update value.
Comment 5 Kohei Yoshida 2014-04-11 13:59:56 UTC
Bug 77138 is also very similar. Not sure if it's a duplicate or not.
Comment 6 m_a_riosv 2014-04-11 15:05:07 UTC
*** Bug 77138 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2014-04-12 02:06:48 UTC
Niklas Johansson committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf1d4c02c14772824a7149957fa119c6e290640b

fdo#76961 - Calc link auto-update interval is changed on file save



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-04-12 02:10:17 UTC
Niklas Johansson committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c070fe636d75b74874c5e93f5cd5d19bd7af7e6d&h=libreoffice-4-2

fdo#76961 - Calc link auto-update interval is changed on file save


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-04-12 02:11:04 UTC
I'll set this fixed.  Thanks again for the patch. :-)
Comment 10 ralf.fehlau 2014-04-12 05:36:31 UTC
Thank you for the fast reaction and the patch.
Comment 11 m_a_riosv 2014-04-13 22:40:31 UTC
Thanks Niklas,
Verified 
Win7x64Ultimate
Version: 4.2.4.0.0+ Build ID: db9a3bf0d7d14d945b9a371b485ecadba81a5919
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-04-13_08:47:48
Version: 4.3.0.0.alpha0+ Build ID: 73ecb924379b8e665ee94235a353403c5d29eae6
   TinderBox: Win-x86@39, Branch:master, Time: 2014-04-13_14:09:42