fdo#76961 - Calc link auto-update interval is changed on file save

The commit fa0fe19e89ba68a6b02cbdd5eff6bc161024c53d accidentaly made the
external links auto-update interval save seconds as milliseconds. This patch
fixes the problem at least on Mac and Windows where I tested it. I also
did a successful build on Fedora 20 with this patch that works as expected.

Change-Id: Ia10d12fb678004a686a4eaa65e9e12f09378a440